need to fix scrolling on mobile

--- a/main.css
+++ b/main.css
@@ -15,37 +15,13 @@ header {
     padding: 20px 15px;
 }
 
-
-/* .overlay2 {
-    background-color: rgba(90, 90, 90, 0.2);
+.background-img {
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('https://images.unsplash.com/photo-1491772135384-20292e4b5ea1?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=111ee66d6a3cf0d92fb1bb9db9e1486d&auto=format&fit=crop&w=1268&q=80');
+    background-position: center;
     background-size: cover;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: -1;
-    top: 0;
-    left: 0;
+    background-repeat: no-repeat;
   }
 
-  .overlay {
-    background-color: rgba(90, 90, 90, 0.2);
-    background-image: url("https://images.unsplash.com/photo-1491772135384-20292e4b5ea1?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=111ee66d6a3cf0d92fb1bb9db9e1486d&auto=format&fit=crop&w=1268&q=80");
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: -1;
-    top: 0;
-    left: 0;
-  } */
-
-
-/* @media only screen and (min-width: 640px) {
-    body {
-        background-color: white;
-    }
-} */
 
 @media only screen and (min-width: 320px) {
     #logo {
@@ -62,15 +38,15 @@ header {
 
     .title h1 {
         color: #FCFCFC;
-        font-size: 2.5rem;
+        font-size: 3rem;
         text-align: center;
-        margin-bottom: 7rem;
+        margin-bottom: 6rem;
     }
 
     .title h2 {
         padding-bottom: 2rem;
         color: #FCFCFC;
-        font-size: 2rem;
+        font-size: 2.5rem;
         text-align: center;
     }
 
@@ -91,22 +67,7 @@ header {
     }
 
     .title {
-        /* background: url(https://images.unsplash.com/photo-1522092787785-60123fde65c4?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=94d6ebf03fdc6a3c8159ac9aeceb0483&auto=format&fit=crop&w=800&q=60) no-repeat center; */
         padding: 15rem 0;
-    }
-
-    .title h1 {
-        color: #2C2C2C;
-        font-size: 3rem;
-        text-align: center;
-        margin-bottom: 6rem;
-    }
-
-    .title h2 {
-        padding-bottom: 2rem;
-        color: #2C2C2C;
-        font-size: 2.5rem;
-        text-align: center;
     }
 }
 
@@ -142,6 +103,7 @@ header {
     outline:none;
     z-index:10000000000000;
   }
+
   .cross{
     background:none;
     position:fixed;
@@ -157,6 +119,7 @@ header {
     outline:none;
     z-index:10000000000000;
   }
+
   .menu {
       z-index:1000000; 
       font-weight:bold; 
@@ -230,25 +193,7 @@ a:hover {
     color: blue;
 } */
 
- #b1 {
-    background: url(https://images.unsplash.com/photo-1491772135384-20292e4b5ea1?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=111ee66d6a3cf0d92fb1bb9db9e1486d&auto=format&fit=crop&w=1268&q=80) no-repeat center center; 
 
-    /* background: url(https://images.unsplash.com/photo-1503756234508-e32369269deb?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=47b63db904d2c72377ffc588f645eb45&auto=format&fit=crop&w=2550&q=80) no-repeat center center;  */
-    /* background: url(https://images.unsplash.com/photo-1522092787785-60123fde65c4?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=94d6ebf03fdc6a3c8159ac9aeceb0483&auto=format&fit=crop&w=800&q=60) no-repeat center; */
-    /* background: url(https://images.unsplash.com/photo-1518658963559-3698900fc8a4?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=aefc46a158500b5950d052278a793663&auto=format&fit=crop&w=1267&q=80) no-repeat center center;  */
-}
-
-
-/* .b2 {
-    width: 50%;
-    float: right;
-    background: url(https://images.unsplash.com/photo-1503756234508-e32369269deb?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=47b63db904d2c72377ffc588f645eb45&auto=format&fit=crop&w=2550&q=80) no-repeat center center; 
-} */
-
-.title p {
-    color: #FCFCFC;
-    text-align: center;
-}
 
 .section-title {
     font-size: 2rem;
